--- a/index.html
+++ b/index.html
@@ -66,11 +66,10 @@
 
     <!-- about -->
     <section class="slide">
-      <h2>Обо мне</h2>
-      <ol>
-        <li>Архитектор ПО</li>
-        <li>Делаю фронтенд</li>
-        <li><em>Не дизайнер</em></li>
+      <ol class="large cover">
+        <li class="next">Я архитектор ПО</li>
+        <li class="next">Я делаю фронтенд</li>
+        <li class="next"><em>Я не дизайнер</em></li>
       </ol>
     </section>
 
@@ -90,10 +89,19 @@
     </section>
 
     <!-- Bad form -->
+    <section class="slide">
+      <img class="cover" src="pictures/bad_form.png" alt="">
+    </section>
 
     <!-- Good form -->
+    <section class="slide">
+      <img class="cover" src="pictures/good_form.png" alt="">
+    </section>
 
     <!-- Bad form vs good form -->
+    <section class="slide">
+      <img class="cover" src="pictures/forms.png" alt="">
+    </section>
 
     <!-- About vertical rhythm -->
     <section class="slide">
@@ -212,9 +220,36 @@
     </section>
 
     <!-- Resets -->
+    <section class="slide">
+      <h2><code>import grid;</code></h2>
+      <div class="columns two">
+        <section>
+          <h3 class="next"><a href="https://github.com/uyouthe/reseight">Reseight</a></h3>
+          <ul>
+            <li class="next">Это нормалайз</li>
+            <li class="next">Убирает все отступы</li>
+            <li class="next">Вы делаете сетку сами</li>
+          </ul>
+        </section>
+        <section>
+          <h3 class="next"><a href="https://github.com/uyouthe/eightilize">Eightilize</a></h3>
+          <ul>
+            <li class="next">Это нормалайз</li>
+            <li class="next">Дает базовые отступы</li>
+            <li class="next">Вы делаете сетку сами</li>
+          </ul>
+        </section>
+      </div>
+    </section>
 
     <!-- Links -->
-
+    <section class="slide">
+      <h2>Ссылки</h2>
+      <ul class="large">
+        <li class="next"><a href="https://miloslav.website">miloslav.website</a></li>
+        <li class="next"><a href="https://spec.fm/specifics/8-pt-grid">Оригинальная статья</a></li>
+      </ul>
+    </section>
 
     <section class="slide">
       <img class="cover" src="pictures/cover.jpg" alt="">
