--- a/index.html
+++ b/index.html
@@ -123,8 +123,6 @@
       <img class="cover" src="pictures/screens.png" alt="">
     </section>
 
-    <!-- Small details -->
-
     <!-- Rems -->
     <section class="slide">
         <pre class="cover">
@@ -160,6 +158,10 @@
     <!-- measuring in photoshop -->
 
     <!-- Designer marks up grid to help developer -->
+    <section class="slide">
+      <h2>2. Измерять теперь проще</h2>
+      <img width="600" src="pictures/grid_mockup.jpg" alt="">
+    </section>
 
     <!-- pixel perfect -->
 
@@ -173,6 +175,11 @@
     <!-- wysiwygs -->
 
     <!-- declarativeness -->
+    <section class="slide">
+      <h2 class="cover" style="text-align: center">
+        <em>Восьмипиксельная сетка более декларативна.</em>
+      </h2>
+    </section>
 
     <!-- silver bullet? -->
     <section class="slide">
