--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!-- about -->
     <section class="slide">
       <ol class="large cover">
-        <li class="next">Я архитектор ПО</li>
+        <li>Я архитектор ПО</li>
         <li class="next">Я делаю фронтенд</li>
         <li class="next"><em>Я не дизайнер</em></li>
       </ol>
@@ -113,6 +113,10 @@
       <code class="cover large">import&nbsp;vertical_rhythm;</code>
     </section>
 
+    <section class="slide">
+      <h2 class="shout shrink">8-point Grid!</h2>
+    </section>
+
     <!-- Website built with 8px-grid -->
     <section class="slide">
       <img class="cover" src="pictures/with_grid.png" alt="">
@@ -125,16 +129,22 @@
 
     <!-- Rems -->
     <section class="slide">
-        <pre class="cover">
+        <pre class="cover large">
             <code>:root {</code>
             <code>    font-size: 16px;</code>
             <code>}</code>
         </pre>
     </section>
 
+    <section class="slide">
+        <pre class="cover large">
+            <code>1 point = .5rem</code>
+        </pre>
+    </section>
+
     <!-- .5rem -->
     <section class="slide">
-        <pre class="cover">
+        <pre class="cover large">
             <code>.button {</code>
             <code>    padding: .5rem 1rem;</code>
             <code>}</code>
@@ -148,7 +158,7 @@
 
     <!-- sass function -->
     <section class="slide">
-        <pre class="cover">
+        <pre class="cover large">
             <code>@function grid_points ($count) {</code>
             <code>    @return 8px * $count;</code>
             <code>}</code>
@@ -156,6 +166,9 @@
     </section>
 
     <!-- measuring in photoshop -->
+    <section class="slide">
+      <p>(измерение в фотошопе)</p>
+    </section>
 
     <!-- Designer marks up grid to help developer -->
     <section class="slide">
@@ -164,6 +177,9 @@
     </section>
 
     <!-- pixel perfect -->
+    <section class="slide">
+      <p>(пиксель перфект)</p>
+    </section>
 
     <!-- pixel fitting -->
     <section class="slide">
@@ -171,8 +187,14 @@
     </section>
 
     <!-- scaling the whole website -->
+    <section class="slide">
+      <p>(изменение масштаба сайта)</p>
+    </section>
 
     <!-- wysiwygs -->
+    <section class="slide">
+      <p>(визуальные редакторы)</p>
+    </section>
 
     <!-- declarativeness -->
     <section class="slide">
@@ -231,7 +253,7 @@
       <h2><code>import grid;</code></h2>
       <div class="columns two">
         <section>
-          <h3 class="next"><a href="https://github.com/uyouthe/reseight">Reseight</a></h3>
+          <h3><a href="https://github.com/uyouthe/reseight">Reseight</a></h3>
           <ul>
             <li class="next">Это нормалайз</li>
             <li class="next">Убирает все отступы</li>
@@ -239,7 +261,7 @@
           </ul>
         </section>
         <section>
-          <h3 class="next"><a href="https://github.com/uyouthe/eightilize">Eightilize</a></h3>
+          <h3><a href="https://github.com/uyouthe/eightilize">Eightilize</a></h3>
           <ul>
             <li class="next">Это нормалайз</li>
             <li class="next">Дает базовые отступы</li>
@@ -253,11 +275,15 @@
     <section class="slide">
       <h2>Ссылки</h2>
       <ul class="large">
-        <li class="next"><a href="https://miloslav.website">miloslav.website</a></li>
-        <li class="next"><a href="https://spec.fm/specifics/8-pt-grid">Оригинальная статья</a></li>
+        <li><a href="https://miloslav.website">miloslav.website</a></li>
+        <li><a href="https://spec.fm/specifics/8-pt-grid">Оригинальная статья</a></li>
       </ul>
     </section>
 
+    <section class="slide">
+      <img class="cover" src="pictures/end.jpg" alt="">
+    </section>
+<!--
     <section class="slide">
       <img class="cover" src="pictures/cover.jpg" alt="">
     </section>
@@ -408,7 +434,7 @@
                 height: 0.72em;
             }
         </style>
-    </section>
+    </section> -->
 
     <footer class="badge">
         <a href="https://github.com/uyouthe/gridtalk">Fork me on GitHub</a>
