--- a/index.html
+++ b/index.html
@@ -114,7 +114,12 @@
     </section>
 
     <section class="slide">
-      <h2 class="shout shrink">8-point Grid!</h2>
+      <h2 class="shout shrink">Восьми&shy;пиксельная сетка!</h2>
+    </section>
+
+    <section class="slide">
+      <img src="pictures/angery.png" alt="" style="opacity: .4">
+      <h2 class="shout">Восьми&shy;пиксельная сетка!</h2>
     </section>
 
     <!-- Website built with 8px-grid -->
@@ -165,40 +170,66 @@
         </pre>
     </section>
 
+    <section class="slide">
+      <h2>Как вставлять текст?</h2>
+      <img width="600" src="pictures/text.png" alt="">
+    </section>
+
+    <section class="slide">
+        <pre class="cover large">
+            <code>:root {</code>
+            <code>    line-height: 1.5;</code>
+            <code>}</code>
+        </pre>
+    </section>
+
+    <section class="slide">
+      <h2>Как вставлять картинки?</h2>
+      <img width="600" src="pictures/pics.png" alt="">
+    </section>
+
+    <section class="slide">
+        <pre class="cover large">
+            <code>img {</code>
+            <code>    max-width: 100%;</code>
+            <code>}</code>
+        </pre>
+    </section>
+
     <!-- measuring in photoshop -->
     <section class="slide">
-      <p>(измерение в фотошопе)</p>
+      <img class="cover" src="pictures/measuring.jpg" alt="">
     </section>
 
     <!-- Designer marks up grid to help developer -->
     <section class="slide">
-      <h2>2. Измерять теперь проще</h2>
+      <h2>1. Измерять теперь проще</h2>
       <img width="600" src="pictures/grid_mockup.jpg" alt="">
     </section>
 
     <!-- pixel perfect -->
     <section class="slide">
-      <p>(пиксель перфект)</p>
+      <h2>2. Пиксель перфект по умолчанию</h2>
+      <div class="columns two">
+        <img src="pictures/diff2.png" alt="">
+        <img src="pictures/diff.png" alt="">
+      </div>
     </section>
 
     <!-- pixel fitting -->
     <section class="slide">
-      <img class="cover" src="pictures/pixel-fitting.png" alt="">
+      <h2>3. Всегда четкая графика</h2>
+      <img src="pictures/pixel-fitting.png" style="margin-top: -30px" alt="">
     </section>
 
     <!-- scaling the whole website -->
-    <section class="slide">
-      <p>(изменение масштаба сайта)</p>
-    </section>
-
-    <!-- wysiwygs -->
-    <section class="slide">
-      <p>(визуальные редакторы)</p>
+    <section class="slide" style="background: black">
+      <img class="cover" src="pictures/future.jpg" alt="">
     </section>
 
     <!-- declarativeness -->
     <section class="slide">
-      <h2 class="cover" style="text-align: center">
+      <h2 class="cover" style="text-align: center; line-height: 1.5">
         <em>Восьмипиксельная сетка более декларативна.</em>
       </h2>
     </section>
@@ -210,7 +241,7 @@
 
     <!-- no -->
     <section class="slide">
-      <span class="cover large">Нет.</span>
+      <span class="cover" style="font-size: 100px">Нет.</span>
     </section>
 
     <!-- cover again -->
@@ -232,10 +263,9 @@
     <section class="slide">
         <figure class="cover">
             <blockquote>
-              <p>Nothing is as dangerous in architecture as dealing with separated problems.</p>
-              <p>If we split life into separated problems we split the possibilities to make good building&nbsp;art.</p>
+              <p>Разбивая задачу на отдельные проблемы, мы разбиваем возможности делать искусство.</p>
             </blockquote>
-            <figcaption>Alvar Aalto</figcaption>
+            <figcaption>Алвар Аалто</figcaption>
         </figure>
     </section>
 
